[package]
name = "openslide"
version = "0.2.0"
authors = ["Ole-Johan Skrede <ojskrede@gmail.com>"]

description = "Rust bindings to the OpenSlide C library"
repository = "https://github.com/ojskrede/openslide-rust"
readme = "README.md"
keywords = ["openslide", "histopathology", "microscopy"]
categories = ["science"]
license = "MIT/Apache-2.0"
exclude = ["assets/*"]

[[bin]]
name = "development"
path = "src/bin/development.rs"
required-features = ["binaries"]

[features]
binaries = ["clap"]

[dependencies]
libc = "0.2"
image = "0.20"
num = "0.2"
byteorder = "1.2"
clap = { version = "2.32", optional = true }

[dev-dependencies]
float-cmp = "0.4"

[build-dependencies]
cc = "1.0"
